[package]
name = "shellcode-dbg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = { version = "0.44.0", features = ["Win32_System_Memory", "Win32_Foundation"] }
clap = { version = "4.1.1", features = ["derive"] }